k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: static-service
  namespace: static

spec:
  type: LoadBalancer
  selector: 
    app: k8s-static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
