k8s/service1.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-static-svc1
  namespace: static

spec:
  type: LoadBalancer
  selector: 
    app: k8s-static-deploymant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
